--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,15 @@
 [mypy]
 ignore_missing_imports = True
 check_untyped_defs = True
-warn_redundant_casts = True
-warn_unused_ignores = True
 warn_no_return = True
-warn_return_any = True
+python_version = 3.4
 
 [flake8]
 max_line_length = 88
 inline_quotes = double
+max_complexity = 20
+
+[isort]
+atomic = True
+use_parentheses = True
+balanced_wrapping = True
